chore(files): Renombrar y reorganizar archivos en la estructura de directorios

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -30,7 +30,8 @@
                 "ms-toolsai.jupyter",
                 "MathWorks.language-matlab",
                 "ms-python.python",
-                "jock.svg"
+                "jock.svg",
+                "frinkr.pdf"
             ]
         }
     }
