--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,10 +1,10 @@
 version: 2
 updates:
- - package-ecosystem: "devcontainers"
-   directory: "/"
-   schedule:
-     interval: weekly
- - package-ecosystem: "pip"
-   directory: "/"
-   schedule:
-     interval: weekly
+    - package-ecosystem: 'devcontainers'
+      directory: '/'
+      schedule:
+          interval: weekly
+    - package-ecosystem: 'pip'
+      directory: '/'
+      schedule:
+          interval: weekly
